Introduced typeInfo model inside TypeInferenceFluent API
In order to facilitate, comparing lambda like arguments, we
need to incorporate typeInfo model inside TypeInferenceFluent and
basic TypeInference API. We are preserving the previous behavior
as it is. But in order to pass lambda like arguments, user has to
model their parameters in typeInfo model.